--- a/task3/报告模板.md
+++ b/task3/报告模板.md
@@ -11,23 +11,27 @@
 ![1](./image/1.png)
 
 1. 如何使用图(a)所示的2选1多选器设计一个具有5个数据输入的多选器？这个多选器需要几位选择信号? 画出你的设计。
-
-2. 如果使用图(a)所示的2选1多选器设计一个具有n个数据输入的多选器, 需要多少个2选1的选择器? 写下你的结论和思考步骤。
+2. 答:![answer1_(1)](C:\Users\H\Desktop\git\Geek_Appraisal\task3\image\answer1_(1).png)
+3. 如果使用图(a)所示的2选1多选器设计一个具有n个数据输入的多选器, 需要多少个2选1的选择器? 写下你的结论和思考步骤。
+4. 答：n-1个。由画图知规律，可得设计一个输入n个数据的多选器，需要（n-1）个2选1选择器。
+5. ![answer1_(2)](C:\Users\H\Desktop\git\Geek_Appraisal\task3\image\answer1_(2).png)
 
 ***
 
 ### 题目二
+
 一个集成电路学院的同学在网上买零件的时候被骗，奸商卖给他的逻辑门X，Y的输出如下表所示：
 
 ![2](./image/2.png)
 
 1. 该同学需要用X与Y这两个逻辑门实现异或门(XOR)，你有什么建议？画出你的电路结构图。
+2. 答：![answer2](C:\Users\H\Desktop\git\Geek_Appraisal\task3\image\answer2.png)
 
 ***
 
 ### 题目三
 
-逻辑电路G1如下，它是一个3输入3输出的数字电路：
+逻辑电路G1如下，它是一个3输入3输出的数字电路
 
 ![3](./image/3.png)
 
